--- a/html/list.html
+++ b/html/list.html
@@ -2,9 +2,137 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>列表页</title>
+    <link href="../css/common.css" rel="stylesheet" type="text/css"/>
+    <link href="../css/list.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="../js/jquery-1.11.3.js"></script>
 </head>
 <body>
+<!--top-->
+<div id="top">
+    <div>
+        <p>
+            <a href="#"><span>&#xe68d;</span>银泰首页</a>
+            <a href="#"><span>&#xe60b;</span>微信<b></b></a>
+            <a href="#"><span>&#xe61a;</span>手机银泰<b></b></a>
+        </p>
+        <p>
+            <span>Hi,<a href="#">欢迎来到银泰网!</a></span>
+            <a href="#">登录</a>
+            <a href="#">注册</a>
+            <a href="#">我的订单</a>
+            <a href="#">我的银泰<b></b></a>
+            <a href="#">银泰卡</a>
+            <a href="#">帮助中心</a>
+        </p>
+    </div>
+</div>
 
+<!--header-->
+<header>
+    <div>
+        <div>
+            <h1>
+                <a href="#">
+                    <img src="../images/logo.jpg"/>
+                </a>
+            </h1>
+            <div>
+                <a href="#">
+                    <img src="../images/sale.png"/>
+                    <!--<img src="../images/sale2.jpg"/>-->
+                </a>
+            </div>
+            <div>
+                <input type="text" placeholder="大家正在搜：装柜同款 HotFace 欧美运动时尚风"/>
+                <a href="#">&#xe62a;</a>
+                <p>
+                    <a href="#">保温杯</a>
+                    <a href="#">童装</a>
+                    <a href="#">文胸</a>
+                    <a href="#">商务包</a>
+                    <a href="#">CHLOE</a>
+                    <a href="#">唇膏</a>
+                    <a href="#">卫衣女</a>
+                    <a href="#">休闲裤男</a>
+                    <a href="#">长袖连衣裙</a>
+                    <a href="#">折扣季</a>
+                </p>
+            </div>
+            <a id='cartcar' href="#"><span>&#xe618;</span>购物袋<b>0</b>件<i></i></a>
+        </div>
+        <nav>
+            <a href="#">全部分类</a>
+            <a href="#">名品馆</a>
+            <a href="#">特卖</a>
+            <a href="#">海淘馆</a>
+            <a href="#">会员专享</a>
+        </nav>
+        <p class="header-right">
+            <a href="#">积分商城</a>
+            <a href="#">全部品牌</a>
+        </p>
+    </div>
+</header>
+
+<!--list-->
+<div class="list-wrap">
+    <div class="list">
+        <div>
+            <p>女装<span></span></p>
+            <p>（商品<span>277</span>款、品牌<span>8</span>个）</p>
+            <div>
+                <a href="#">婴童</a>
+                <a href="#">名品</a>
+                <a href="#">户外</a>
+                <a href="#">美妆</a>
+                <a href="#">运动</a>
+                <a href="#">箱包</a>
+                <a href="#">内衣</a>
+                <a href="#">家居</a>
+                <a href="#">配饰</a>
+                <a href="#">鞋靴</a>
+                <a href="#">男装</a>
+            </div>
+        </div>
+        <div>
+
+        </div>
+
+    </div>
+</div>
+
+
+<!--footer-->
+<footer>
+    <p>
+        <a href="#">关于银泰</a>
+        <a href="#">帮助中心</a>
+        <a href="#">退换货政策</a>
+        <a href="#">网站地图</a>
+        <a href="#">代理合作</a>
+        <a href="#">品牌招商</a>
+        <a href="#">商务合作</a>
+        <a href="#">网站联盟</a>
+        <a href="#">联系我们</a>
+        <a href="#">加入银泰</a>
+        <a href="#">版权声明</a>
+        <a href="#">法律声明</a>
+    </p>
+    <p>
+        <a href="#">浙ICP备10200233号</a>
+        <a href="#">京公网安备110105019085</a>
+        <a href="#">增值电信业务经营许可证：浙B2-20110005</a>
+    </p>
+    <p>Copyright &copy; 2010-2017，浙江银泰电子商务有限公司</p>
+    <p>
+        <img src="../images/xin.png"/>
+        <img src="../images/xin2.gif"/>
+    </p>
+</footer>
+
+
+<script src="../js/template.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/list/list.js"></script>
 </body>
 </html>
