--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
 </footer>
 
 <script type="text/javascript" src="js/home/home.js"></script>
-<script src="js/home/template.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/template.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/home/nav.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
