--- a/html/goods.html
+++ b/html/goods.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>详情页</title>
     <link href="../css/common.css" rel="stylesheet" type="text/css"/>
     <link href="../css/goods.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.11.3.js"></script>
 </head>
 <body>
 <!--top-->
@@ -88,15 +88,24 @@
             <a href="#">潮流印花长袖衬衫女休闲直筒单排扣衬衣</a>
         </p>
 
-        <div class="good-info">
-            <div>
-                <ul id="pic-middle">
-                    <li><img src="../images/middle1.jpg"></li>
-                    <li><img src="../images/middle2.jpg"></li>
-                    <li><img src="../images/middle3.jpg"></li>
-                    <li><img src="../images/middle4.jpg"></li>
-                    <li><img src="../images/middle5.jpg"></li>
-                </ul>
+        <div class="good-info" id="good-info">
+            <div id="info-part1">
+                <div id="pic-middle">
+                    <ul>
+                        <li><img src="../images/middle1.jpg"></li>
+                        <li><img src="../images/middle2.jpg"></li>
+                        <li><img src="../images/middle3.jpg"></li>
+                        <li><img src="../images/middle4.jpg"></li>
+                        <li><img src="../images/middle5.jpg"></li>
+                    </ul>
+                    <div id="shadow"></div>
+                </div>
+                <div class="share">
+                    <p>商品编号：21-459-7302</p>
+                    <a href="#"><span>&#xe614;</span>收藏</a>
+                    <a href="#"><span>&#xe60b;</span></a>
+                    <a href="#"><span>&#xe626;</span></a>
+                </div>
                 <div id="pic-small">
                     <ul>
                         <li><img src="../images/small1.jpg"></li>
@@ -107,25 +116,128 @@
                     </ul>
                 </div>
                 <div id="pic-large">
-                    <li><img src="../images/large1.jpg"></li>
-                    <li><img src="../images/large2.jpg"></li>
-                    <li><img src="../images/large3.jpg"></li>
-                    <li><img src="../images/large4.jpg"></li>
-                    <li><img src="../images/large5.jpg"></li>
+                    <ul id="large-img">
+                        <li><img src="../images/large1.jpg"></li>
+                        <li><img src="../images/large2.jpg"></li>
+                        <li><img src="../images/large3.jpg"></li>
+                        <li><img src="../images/large4.jpg"></li>
+                        <li><img src="../images/large5.jpg"></li>
+                    </ul>
                 </div>
-
             </div>
-            <div id="con-info"></div>
-            <div></div>
+            <div id="con-info">
+                <h6>3洛可可2017秋装新款时尚潮流印花长袖衬衫女休闲直筒单排扣衬衣462SC171</h6>
+                <p>银泰价：<span class="yt-price">￥169.00</span></p>
+                <p>参考价：<span class="refer-price">￥399.00</span></p>
+                <div class="activity"><p>满减</p>秋季上新，满299减100，可累计</div>
+                <p class="color">选择颜色:
+                    <a href="#">花色</a>
+                </p>
+                <p class="size">选择尺码:
+                    <a href="#">S</a>
+                    <a href="#">M</a>
+                    <a href="#">L</a>
+                </p>
+                <div class="choose">
+                    <p class="number">1<b><span></span><span></span></b></p>
+                    <a class="now" href="#">立即购买</a>
+                    <a class="cart" href="#"><span>&#xe618;</span>加入购物车</a>
+                </div>
+                <p class="promise">服务承诺：<span>正品保障</span><span>支持无理由退换货</span></p>
+            </div>
+            <div class="brand">
+                <a href="#">ROCOCO</a>
+                <a href="#">洛可可旗舰店</a>
+            </div>
         </div>
 
         <div class="good-details">
-            <div class="details-main">123</div>
-            <div class="details-aside">456</div>
+            <div class="details-main">
+                <p class="details-tit">
+                    <a href="#">商品介绍</a>
+                    <a href="#">商品评价</a>
+                    <a href="#">商品咨询</a>
+                    <a href="#">购买须知</a>
+                    <span><b>&#xe618;</b>加入购物车</span>
+                    <span>手机下单更便捷</span>
+                </p>
+                <div class="product">
+                    <div class="product-para">
+                        <p class="product-tit"><span>商品参数</span>Product Parameters</p>
+                        <table>
+                            <tr>
+                                <td>上市时间：2017-Q3</td>
+                                <td>尺码：S</td>
+                                <td>色系：花色</td>
+                                <td>面料：聚酯纤维100%</td>
+                            </tr>
+                            <tr>
+                                <td>领型：翻领/POLO领</td>
+                                <td>版型：直筒</td>
+                                <td>袖长范围：长袖</td>
+                                <td>衣长范围：常规款</td>
+                            </tr>
+                            <tr>
+                                <td>风格：OL风格</td>
+                                <td>流行元素：印花/印染</td>
+                                <td>厚度：适中</td>
+                                <td>适合年龄：25-29周岁</td>
+                            </tr>
+                            <tr>
+                                <td>是否中老年女装：否</td>
+                                <td>是否大码女装：否</td>
+                                <td>面料柔软度：适中</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <p class="product-tit"><span>商品详情</span>Product Details</p>
+                    <img src="../images/pro1.jpg"/>
+                    <img src="../images/pro2.jpg"/>
+                    <img src="../images/pro3.jpg"/>
+                    <img src="../images/pro4.jpg"/>
+                    <img src="../images/pro5.jpg"/>
+                    <img src="../images/pro6.jpg"/>
+                    <img src="../images/pro7.jpg"/>
+                    <img src="../images/pro8.jpg"/>
+                    <img src="../images/pro9.jpg"/>
+                    <p class="product-tit"><span>价格说明</span>Price Description</p>
+                    <p class="des">银泰价：银泰价为商品的销售价，该价格是交易成交价，是您最终决定是否购买商品的依据。</p>
+                    <p class="des">划线价：商品展示的划横线价格为参考价，该价格可能是品牌专柜标价、商品吊牌价或由品牌供应商提供的正品零售价（如厂商指导价、建议零售价等）或该商品在银泰网平台上曾经展示过的销售价；由于地区、时间的差异性和市场行情波动，品牌专柜标价、商品吊牌价等可能会与您购物时展示的不一致，该价格仅供您参考。</p>
+                    <p class="des">折扣：银泰网上展示的折扣为银泰价与参考价的对比（该值四舍五入后采小数点后1位，如¥799/¥2899=0.2756=2.8折），该对比值仅供您参考，不作为结算基数。</p>
+                    <p class="des">促销：商品促销信息以商品详情页“促销”栏中的信息为准；商品的具体售价以订单结算页价格为准；如您发现活动商品售价或促销信息有异常，建议购买前先联系银泰网客服进行咨询。</p>
+                    <p class="product-tit"><span>品牌故事</span>Brand Story</p>
+                    <div class="brand-story">
+                        <div>
+                            <p>ROCOCO</p>
+                            <p>ROCOCO</p>
+                            <p>洛可可品牌，源自18世纪法国沙龙文化，精致、优雅的洛可可艺术与快速、多元的现代 时尚的融合，让她不失淑女的甜美、文雅又富有独立女性的自信、智慧，使她成为风格 显著、别具一格的时尚品牌。ROCOCO坚持使用经典的艺术形成碰撞现代国际的时尚潮流 ，使她拥有了自己独特的审美和装饰语言，这份独特为现代......</p>
+                            <a href="#">进入品牌店>></a>
+                        </div>
+                        <img src="../images/brand.jpg"/>
+                    </div>
+
+
+
+                </div>
+            </div>
+            <div class="details-aside">
+
+                <script id="aside" type="text/html">
+                    {{each productAside as value}}
+                        <h6>{{value.asideTit}}<a href="#">换一换</a></h6>
+                        {{each value.asideList as value2 i}}
+                        <div>
+                            <a href="#"><img src="{{value2.src}}"/></a>
+                            <p><a href="#">{{value2.name}}</a></p>
+                            <span>{{value2.price1}}</span>
+                            <b>{{value2.price2}}</b>
+                        </div>
+                        {{/each}}
+                    {{/each}}
+                </script>
+
+            </div>
         </div>
-
-
-
     </div>
 </div>
 
@@ -162,7 +274,7 @@
 </footer>
 
 
-<script src="../js/goods/login.js"></script>
-<script src="js/home/template.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/template.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/goods/goods.js"></script>
 </body>
 </html>
