--- a/font/demo_fontclass.html
+++ b/font/demo_fontclass.html
@@ -55,6 +55,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-dingbu"></i>
+                    <div class="name">顶部</div>
+                    <div class="fontclass">.icon-dingbu</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-nvzhuang"></i>
                     <div class="name">女装</div>
                     <div class="fontclass">.icon-nvzhuang</div>
