--- a/font/demo_symbol.html
+++ b/font/demo_symbol.html
@@ -85,6 +85,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-dingbu"></use>
+                    </svg>
+                    <div class="name">顶部</div>
+                    <div class="fontclass">#icon-dingbu</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-nvzhuang"></use>
                     </svg>
                     <div class="name">女装</div>
