--- a/html/register.html
+++ b/html/register.html
@@ -13,7 +13,7 @@
 <div id="login-top">
     <div class="logo">
         <h1>
-            <a href="#"><img src="../images/logo.jpg"/></a>
+            <a class="logo-link" href="../index.html"><img src="../images/logo.jpg"/></a>
         </h1>
         <span>欢迎登录</span>
     </div>
@@ -48,7 +48,7 @@
         </div>
         <div id="register" class="login-register">
             <h6>注册护照</h6>
-            <span>已注册可<a href="#">直接登录</a></span>
+            <span>已注册可<a href="login.html">直接登录</a></span>
             <div>
                 <input id="reg-number" type="text" placeholder="请输入手机号" required="required"/>
             </div>
@@ -109,5 +109,6 @@
 
 
 <script src="../js/login-register/register.js"></script>
+<script src="../js/login-register/common.js"></script>
 </body>
 </html>
